Fixed overflow-x weirdness with edge

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,6 +15,7 @@
 html {
     background: var(--tertiary-color);
     height: 100%;
+    overflow-x: hidden;
 }
 
 #wrapper {
